--- a/src/html/includes/header-auth.html
+++ b/src/html/includes/header-auth.html
@@ -51,15 +51,15 @@
                         </div>
                     </div>
                     <!--            ELSE-->
-                    <div class="header-info_btn l-hide tablet-hide">
-                        <button type="button" class="l-btn l-btn_reg">Регистрация</button>
-                    </div>
+<!--                    <div class="header-info_btn tablet-hide">-->
+<!--                        <button type="button" class="l-btn l-btn_reg">Регистрация</button>-->
+<!--                    </div>-->
 
                     <div class="header-info_btn tablet-hide">
                         <!--              IS AUTH-->
                         <button type="button" class="l-btn l-btn_login l-btn_login_l1 ">Выход</button>
                         <!--              ELSE-->
-                        <button type="button" class="l-btn l-btn_login l-hide">Вход</button>
+<!--                        <button type="button" class="l-btn l-btn_login">Вход</button>-->
                     </div>
 
                     <div class="header-info-phone tablet-hide">
@@ -93,15 +93,15 @@
 
                         </div>
                         <!--            ELSE-->
-                        <div class="header-info_btn l-hide">
-                            <button type="button" class="l-btn l-btn_reg">Регистрация</button>
-                        </div>
+<!--                        <div class="header-info_btn">-->
+<!--                            <button type="button" class="l-btn l-btn_reg">Регистрация</button>-->
+<!--                        </div>-->
 
                         <div class="header-info_btn">
                             <!--              IS AUTH-->
                             <button type="button" class="l-btn l-btn_login l-btn_login_l1 ">Выход</button>
                             <!--              ELSE-->
-                            <button type="button" class="l-btn l-btn_login l-hide">Вход</button>
+<!--                            <button type="button" class="l-btn l-btn_login">Вход</button>-->
                         </div>
                         <div class="drawer-menu">
                             <div class="header-menu-item">
