--- a/src/html/views/1-home.html
+++ b/src/html/views/1-home.html
@@ -751,6 +751,6 @@ title: "Розыгрыш конкурсов | Главная"
 
         </div>
     </section>
-
+    <%= _.template(require('./../includes/modals/auth.html').default)(data) %>
 </main>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
