--- a/src/html/includes/components/footer-product.html
+++ b/src/html/includes/components/footer-product.html
@@ -4,8 +4,8 @@
                 <div class="footer-title">Розыгрыш конкурсов</div>
                 <div class="footer-menu">
                     <div class="footer-menu-col">
-                        <a href="#" class="footer-menu-link">Вход</a>
-                        <a href="#" class="footer-menu-link">Регистрация</a>
+                        <a href="#" class="footer-menu-link" data-toggle="modal" data-target="#modalAuth">Вход</a>
+                        <a href="#" class="footer-menu-link" data-toggle="modal" data-target="#modalRegister">Регистрация</a>
                         <a href="#" class="footer-menu-link">Личный кабинет</a>
                     </div>
                     <div class="footer-menu-col">
