--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -1,11 +1,11 @@
-    <footer class="l-hide">
+    <footer>
         <div class="footer-layout box">
             <div class="footer-box">
                 <div class="footer-title">Розыгрыш конкурсов</div>
                 <div class="footer-menu">
                     <div class="footer-menu-col">
-                        <a href="#" class="footer-menu-link">Вход</a>
-                        <a href="#" class="footer-menu-link">Регистрация</a>
+                        <a href="#" class="footer-menu-link" data-toggle="modal" data-target="#modalAuth">Вход</a>
+                        <a href="#" class="footer-menu-link" data-toggle="modal" data-target="#modalRegister">Регистрация</a>
                         <a href="#" class="footer-menu-link">Личный кабинет</a>
                     </div>
                     <div class="footer-menu-col">
