--- a/src/html/views/1-3-home-auth.html
+++ b/src/html/views/1-3-home-auth.html
@@ -3,7 +3,7 @@ title: "Розыгрыш конкурсов | Главная"
 }; %>
 <%= _.template(require('./../includes/header.html').default)(data) %>
 <main role="main">
-    <!--    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#winForRepost">-->
+    <!--    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalAuth">-->
     <!--        Launch demo modal-->
     <!--    </button>-->
     <!--    TODO: js-start-modal - Запуск окна при загрузке-->
