--- a/src/html/views/1-7-home-registration.html
+++ b/src/html/views/1-7-home-registration.html
@@ -3,11 +3,11 @@ title: "Розыгрыш конкурсов | Главная"
 }; %>
 <%= _.template(require('./../includes/header.html').default)(data) %>
 <main role="main">
-    <!--    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#winForRepost">-->
+    <!--    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalRegister">-->
     <!--        Launch demo modal-->
     <!--    </button>-->
     <!--    TODO: js-start-modal - Запуск окна при загрузке-->
-    <div class="modal l-modal l-modal_t1 l-modal_l2 fade js-start-modal" id="modalRecovery" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal l-modal l-modal_t1 l-modal_l2 fade js-start-modal" id="modalRegister" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
