add modals on all pages

--- a/src/html/views/12-page.html
+++ b/src/html/views/12-page.html
@@ -131,5 +131,6 @@ title: "Розыгрыш конкурсов | Вопрос"
 
         </div>
     </section>
+    <%= _.template(require('./../includes/modals/auth.html').default)(data) %>
 </main>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
