--- a/src/html/views/2-product.html
+++ b/src/html/views/2-product.html
@@ -182,6 +182,6 @@ title: "Розыгрыш конкурсов | Главная"
         </div>
     </div>
 </section>
-
+    <%= _.template(require('./../includes/modals/auth.html').default)(data) %>
 </main>
 <%= _.template(require('./../includes/components/footer-product.html').default)(data) %>
