--- a/src/html/views/3-to-begin.html
+++ b/src/html/views/3-to-begin.html
@@ -270,6 +270,6 @@ title: "Розыгрыш конкурсов | Начать"
             </div>
         </div>
     </section>
-
+    <%= _.template(require('./../includes/modals/auth.html').default)(data) %>
 </main>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
