--- a/src/html/views/7-page.html
+++ b/src/html/views/7-page.html
@@ -45,6 +45,6 @@ title: "Розыгрыш конкурсов | Помощь"
 
     </div>
 </section>
-
+    <%= _.template(require('./../includes/modals/auth.html').default)(data) %>
 </main>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
