--- a/src/html/views/10-page.html
+++ b/src/html/views/10-page.html
@@ -75,6 +75,6 @@ title: "Розыгрыш конкурсов | ЛК | Баланс"
 
     </div>
 </section>
-
+    <%= _.template(require('./../includes/modals/auth.html').default)(data) %>
 </main>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
