--- a/src/html/views/11-2-page.html
+++ b/src/html/views/11-2-page.html
@@ -213,6 +213,6 @@ title: "Розыгрыш конкурсов | ЛК | Профиль"
 
         </div>
     </section>
-
+    <%= _.template(require('./../includes/modals/auth.html').default)(data) %>
 </main>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
