--- a/src/html/views/5-page.html
+++ b/src/html/views/5-page.html
@@ -39,6 +39,6 @@ title: "Розыгрыш конкурсов | Доставка"
 
     </div>
 </section>
-
+    <%= _.template(require('./../includes/modals/auth.html').default)(data) %>
 </main>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
