--- a/src/html/views/6-page.html
+++ b/src/html/views/6-page.html
@@ -149,5 +149,6 @@ title: "Розыгрыш конкурсов | Часто задаваемые в
             </div>
         </div>
     </section>
+    <%= _.template(require('./../includes/modals/auth.html').default)(data) %>
 </main>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
