--- a/src/html/views/9-page.html
+++ b/src/html/views/9-page.html
@@ -95,6 +95,6 @@ title: "Розыгрыш конкурсов | ЛК | Мои аукционы"
 
     </div>
 </section>
-
+    <%= _.template(require('./../includes/modals/auth.html').default)(data) %>
 </main>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
