--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -94,6 +94,6 @@ title: "Розыгрыш конкурсов | Главная"
 
 
     </div>
-
+    <%= _.template(require('./../includes/modals/auth.html').default)(data) %>
 </main>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
