--- a/src/html/views/10-page.html
+++ b/src/html/views/10-page.html
@@ -6,7 +6,7 @@ title: "Розыгрыш конкурсов | ЛК | Баланс"
 
 <section class="info info_l1">
     <div class="box">
-        <div class="info-layout">
+        <div class="info-layout lk-balance">
             <div class="sidebar sidebar_l3">
                 <div class="sidebar-item">
                     <a class="nav-link l-icon-m l-icon-m_auction" href="#">Мои аукционы</a>
@@ -47,7 +47,25 @@ title: "Розыгрыш конкурсов | ЛК | Баланс"
                                     </div>
                                 </div>
                             </div>
-
+                            <div class="sum-box">
+                                <div class="sum-box-layout">
+                                    <div class="sum-box-items">
+                                        <div class="sum-box-total">
+                                            <span>Итог:</span>
+                                            <div class="sum-box-total-label">Сумма, руб:</div>
+                                            <div class="sum-box-total-input">
+                                                <input type="number" class="l-input l-input_l1 l-input_num" value="100">
+                                            </div>
+                                        </div>
+                                        <div class="sum-box-total">
+                                            <div class="sum-box-total-label">Сумма, балл:</div>
+                                            <div class="sum-box-total-input">
+                                                <input type="number" class="l-input l-input_l1 l-input_num" value="100">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
 
@@ -61,7 +79,14 @@ title: "Розыгрыш конкурсов | ЛК | Баланс"
                     <div class="c-card-box">
                         <div class="c-card-head">Ваши стикеры</div>
                         <div class="c-card-content">
+                            <div class="c-card-over l-scrollbar">
+                                <div class="stickers-col">
 
+
+                                    <%= _.template(require('./../includes/stickers/stickers-box.html').default)(data) %>
+
+                                </div>
+                            </div>
                         </div>
                     </div>
 
