--- a/src/scss/pages/_info.scss
+++ b/src/scss/pages/_info.scss
@@ -114,8 +114,10 @@
   &-right-sidebar {
     max-width: 340px;
     width: 100%;
-    margin-left: 20px;
     transition: .3s;
+    @media (min-width: 986px) {
+      margin-left: 20px;
+    }
   }
 }
 .panel-default {
