--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -28,6 +28,7 @@
 @import "blocks/c-card";
 @import "pages/settings";
 @import "blocks/collapse";
+@import "blocks/methodPay";
 
 //Слои
 @import "layers/header";
