--- a/src/html/views/10-page.html
+++ b/src/html/views/10-page.html
@@ -95,6 +95,113 @@ title: "Розыгрыш конкурсов | ЛК | Баланс"
 
                 </div>
 
+                <div class="l-table">
+                    <div class="l-table-title">Списания</div>
+                    <div class="l-table-box l-scrollbar">
+
+                        <table class="l-table-t">
+                            <thead>
+                            <tr class="l-table_tr">
+                                <th class="l-table_th">
+                                    Дата
+                                </th>
+                                <th class="l-table_th">
+                                    Время
+                                </th>
+                                <th class="l-table_th">
+                                    Номинал
+                                </th>
+                                <th class="l-table_th">
+                                    Количество
+                                </th>
+                                <th class="l-table_th right">
+                                    Сумма
+                                </th>
+                                <th class="l-table_th">
+                                    Примечание
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr class="l-table_tr">
+                                <td class="l-table_td">01.04.2019</td>
+                                <td class="l-table_td">20:00</td>
+                                <td class="l-table_td">100</td>
+                                <td class="l-table_td">100</td>
+                                <td class="l-table_td right">100</td>
+                                <td class="l-table_td">
+                                    <a href="#">Акция №1</a>
+                                </td>
+                            </tr>
+                            <tr class="l-table_tr">
+                                <td class="l-table_td">01.04.2019</td>
+                                <td class="l-table_td">20:00</td>
+                                <td class="l-table_td">100</td>
+                                <td class="l-table_td">100</td>
+                                <td class="l-table_td right">100</td>
+                                <td class="l-table_td">
+                                    <a href="#">Акция №1</a>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
+
+                <div class="l-table">
+                    <div class="l-table-title">Зачисления</div>
+                    <div class="l-table-box l-scrollbar">
+
+                        <table class="l-table-t">
+                            <thead>
+                            <tr class="l-table_tr">
+                                <th class="l-table_th">
+                                    Дата
+                                </th>
+                                <th class="l-table_th">
+                                    Время
+                                </th>
+                                <th class="l-table_th">
+                                    Номинал
+                                </th>
+                                <th class="l-table_th">
+                                    Количество
+                                </th>
+                                <th class="l-table_th right">
+                                    Сумма
+                                </th>
+                                <th class="l-table_th">
+                                    Примечание
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr class="l-table_tr">
+                                <td class="l-table_td">01.04.2019</td>
+                                <td class="l-table_td">20:00</td>
+                                <td class="l-table_td">100</td>
+                                <td class="l-table_td">100</td>
+                                <td class="l-table_td right">100</td>
+                                <td class="l-table_td">
+                                    <a href="#">Акция №1</a>
+                                </td>
+                            </tr>
+                            <tr class="l-table_tr">
+                                <td class="l-table_td">01.04.2019</td>
+                                <td class="l-table_td">20:00</td>
+                                <td class="l-table_td">100</td>
+                                <td class="l-table_td">100</td>
+                                <td class="l-table_td right">100</td>
+                                <td class="l-table_td">
+                                    <a href="#">Акция №1</a>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
             </div>
 
             <div class="info-right-sidebar">
