--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -29,6 +29,7 @@
 @import "pages/settings";
 @import "blocks/collapse";
 @import "blocks/methodPay";
+@import "blocks/table";
 
 //Слои
 @import "layers/header";
