--- a/src/scss/blocks/_methodPay.scss
+++ b/src/scss/blocks/_methodPay.scss
@@ -53,6 +53,9 @@
   }
   @media (max-width: 768px) {
     padding: 20px;
+    &-box {
+      margin-bottom: 0;
+    }
   }
   @media (max-width: 480px) {
     &-box {
