--- a/src/html/views/8-page.html
+++ b/src/html/views/8-page.html
@@ -8,35 +8,21 @@ title: "Розыгрыш конкурсов | О нас"
     <div class="box">
         <h1 class="info-title">О нас</h1>
         <div class="info-layout">
-            <ul class="sidebar sidebar_l2 nav nav-tabs" id="myTab" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active" id="terms-tab" data-toggle="tab" href="#terms" role="tab" aria-controls="terms" aria-selected="true">Пользовательское соглашение</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="algorithm-tab" data-toggle="tab" href="#algorithm" role="tab" aria-controls="algorithm" aria-selected="false">Алгоритм розыгрыша</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="promotion-tab" data-toggle="tab" href="#promotion" role="tab" aria-controls="promotion" aria-selected="false">Правила проведения акции</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="payment-tab" data-toggle="tab" href="#payment" role="tab" aria-controls="payment" aria-selected="false">Способы оплаты</a>
-                </li>
-            </ul>
+            <div class="emblem">
+                <img src="/img/demo/preview.png">
+            </div>
 
             <!-- Tab panes -->
-            <div class="info-content info-content_l1 tab-content">
-                <div class="tab-pane active" id="terms" role="tabpanel" aria-labelledby="terms-tab">
-                    <%= _.template(require('./../includes/text/text1.html').default)(data) %>
-                </div>
-                <div class="tab-pane" id="algorithm" role="tabpanel" aria-labelledby="algorithm-tab">
-                    <%= _.template(require('./../includes/text/text1.html').default)(data) %>
-                </div>
-                <div class="tab-pane" id="promotion" role="tabpanel" aria-labelledby="promotion-tab">
-                    <%= _.template(require('./../includes/text/text1.html').default)(data) %>
-                </div>
-                <div class="tab-pane" id="payment" role="tabpanel" aria-labelledby="payment-tab">
-                    <%= _.template(require('./../includes/text/text1.html').default)(data) %>
-                </div>
+            <div class="info-content info-content_l2 info-content_l3 page-text">
+                <h3>История создания</h3>
+                <p>Не следует, однако забывать, что реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Идейные соображения высшего порядка, а также рамки и место обучения кадров требуют от нас анализа существенных финансовых и административных условий.
+                </p>
+                <h3>Идея</h3>
+                <p>Не следует, однако забывать, что реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Идейные соображения высшего порядка, а также рамки и место обучения кадров требуют от нас анализа существенных финансовых и административных условий.
+                </p>
+                <h3>Цели</h3>
+                <p>Не следует, однако забывать, что реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов) участие в формировании соответствующий условий активизации. Идейные соображения высшего порядка, а также рамки и место обучения кадров требуют от нас анализа существенных финансовых и административных условий.
+                </p>
             </div>
         </div>
 
