--- a/src/scss/pages/_info.scss
+++ b/src/scss/pages/_info.scss
@@ -37,6 +37,15 @@
     &_l1 {
       padding-bottom: 40px;
     }
+    &_l2 {
+      max-width: 800px;
+      margin-right: auto;
+      padding-bottom: 40px;
+      @media (max-width: 768px){
+        max-width: 100%;
+        padding-bottom: 16px;
+      }
+    }
   }
   .sidebar {
     max-width: 340px;
@@ -260,4 +269,52 @@
     }
   }
 
+}
+.page-text {
+  font-size: 18px;
+  line-height: 28px;
+  color: #404040;
+  h2 {
+    font-weight: 500;
+    font-size: 28px;
+    margin-bottom: 18px;
+  }
+  h3 {
+    font-weight: 500;
+    font-size: 24px;
+    margin-bottom: 18px;
+  }
+  p {
+    margin-bottom: 20px;
+  }
+  @media (max-width: 768px) {
+    font-size: 16px;
+    h2 {
+      font-size: 24px;
+      margin-bottom: 14px;
+    }
+    h3 {
+      font-size: 20px;
+      margin-bottom: 14px;
+    }
+    p {
+      margin-bottom: 18px;
+    }
+
+  }
+}
+.emblem {
+  max-width: 290px;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 10px;
+  margin-right: 45px;
+  transition: .3s;
+  img {
+    width: 100%;
+  }
+  @media (max-width: 768px) {
+    margin: auto;
+    padding-bottom: 20px;
+  }
 }
