--- a/src/html/views/8-page.html
+++ b/src/html/views/8-page.html
@@ -8,8 +8,10 @@ title: "Розыгрыш конкурсов | О нас"
     <div class="box">
         <h1 class="info-title">О нас</h1>
         <div class="info-layout">
-            <div class="emblem">
-                <img src="/img/demo/preview.png">
+            <div class="emblem gallery">
+                <a href="/img/demo/preview.png" class="icon-plus" data-caption="О нас">
+                    <img src="/img/demo/preview.png" alt="О нас">
+                </a>
             </div>
 
             <!-- Tab panes -->
