--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -39,6 +39,7 @@
 @import "libs/drawer";
 @import "libs/swiper";
 @import "libs/flatpickr";
+@import "libs/baguetteBox";
 
 .l-hide {
   display: none;
