--- a/src/scss/pages/_info.scss
+++ b/src/scss/pages/_info.scss
@@ -312,6 +312,24 @@
   transition: .3s;
   img {
     width: 100%;
+    position: relative;
+  }
+  .icon-plus {
+    position: relative;
+    &:before {
+      content: '';
+      position: absolute;
+      width: 48px;
+      height: 48px;
+      background-image: url("data:image/svg+xml,%3Csvg width='48' height='48' viewBox='0 0 48 48' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M31.7096 30.2911L43.7072 42.293C44.6499 43.236 43.2354 44.65 42.2928 43.707L30.2957 31.7056C27.2928 34.3771 23.3362 36 19 36C9.61051 36 2 28.3901 2 19C2 9.61051 9.60987 2 19 2C28.3895 2 36 9.60987 36 19C36 23.3338 34.3788 27.2887 31.7096 30.2911ZM4 19C4 27.2855 10.715 34 19 34C27.2855 34 34 27.285 34 19C34 10.7145 27.285 4 19 4C10.7145 4 4 10.715 4 19ZM18 18V14C18 12.6667 20 12.6667 20 14V18H24C25.3333 18 25.3333 20 24 20H20V24C20 25.3333 18 25.3333 18 24V20H14C12.6667 20 12.6667 18 14 18H18Z' fill='%23526CB3'/%3E%3C/svg%3E%0A");
+      background-size: cover;
+      z-index: 1;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      margin: auto;
+    }
   }
   @media (max-width: 768px) {
     margin: auto;
