--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -30,6 +30,7 @@
 @import "blocks/collapse";
 @import "blocks/methodPay";
 @import "blocks/table";
+@import "blocks/reviews";
 
 //Слои
 @import "layers/header";
