--- a/src/scss/blocks/_articles.scss
+++ b/src/scss/blocks/_articles.scss
@@ -1,3 +1,172 @@
-.articles {
+.l-article {
+  padding-bottom: 110px;
+  transition: .3s;
+  &-item {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 60px;
+    padding-left: 46px;
+    padding-right: 46px;
+    transition: .3s;
+    &:not(:last-child){
+      padding-bottom: 60px;
+      margin-bottom: 60px;
+      border-bottom: 1px solid #E8EBF3;
+    }
+  }
+  &-cover {
+    max-width: 340px;
+    min-width: 340px;
+    width: 100%;
+    min-height: 291px;
+    overflow: hidden;
+    border-radius: 3px;
+    margin-right: 20px;
+    transition: .3s;
+    &_bg {
+      background-size: cover;
+      width: 100%;
+      height: 100%;
+      background-position: center;
+    }
+  }
+  &-desc {
+    &-name {
+      font-weight: 500;
+      font-size: 24px;
+      line-height: 28px;
+      color: #404040;
+      padding-bottom: 20px;
+      transition: .3s;
+    }
+    &-text {
+      font-size: 18px;
+      line-height: 28px;
+      color: #404040;
+    }
+  }
+  &-info {
+    font-size: 18px;
+    line-height: 21px;
+    max-width: 160px;
+    width: 100%;
+    margin-left: 22px;
+    transition: .3s;
+    &-label {
+      color: #5D6888;
+      padding-bottom: 10px;
+    }
+    &-date {
+      font-weight: 500;
+      color: #404040;
+      margin-bottom: 26px;
+    }
+    &-link {
+      display: flex;
+      align-items: center;
+      text-decoration-line: underline;
+      color: #526CB3;
+      margin-bottom: 12px;
+    }
+    .soc-icon {
+      width: 16px;
+      height: 16px;
+      margin-right: 8px;
+    }
+  }
+  &-more {
+    max-width: 1180px;
+    width: 100%;
+    margin: auto;
+    .l-btn {
+      width: 100%;
+      margin-bottom: 16px;
+    }
+  }
+  @media (max-width: 1200px) {
+    &-item {
+      padding-left: 0;
+      padding-right: 0;
+    }
+  }
+  @media (max-width: 1100px) {
+    padding-bottom: 70px;
+    &-cover {
+      max-width: 250px;
+      min-width: 250px;
+      width: auto;
+    }
+  }
+  @media (max-width: 986px) {
+    padding-bottom: 50px;
+    &-item {
+      flex-wrap: wrap;
+      &:not(:last-child) {
+        padding-bottom: 30px;
+        margin-bottom: 32px;
+      }
+    }
+    &-cover {
+      max-width: 50%;
+      min-width: 50%;
+      width: auto;
+      flex-basis: 50%;
+    }
+    &-desc {
+      order: 3;
+      flex-basis: 100%;
+      margin-top: 20px;
+      &-name {
+        font-size: 22px;
+        padding-bottom: 6px;
+      }
+      &-text {
+        font-size: 16px;
+        line-height: 26px;
+      }
+    }
+    &-info {
+      margin-left: auto;
+    }
+  }
+  @media (max-width: 768px) {
+    padding-top: 16px;
+    padding-bottom: 30px;
+  }
+  @media (max-width: 480px) {
+    &-item {
+      &:not(:last-child) {
+        padding-bottom: 12px;
+        margin-bottom: 22px;
+      }
+    }
+    &-cover {
+      max-width: 100%;
+      min-width: 100%;
+      width: auto;
+      flex-basis: 100%;
+    }
+    &-info {
+      margin: auto;
+      padding-top: 20px;
+      &-date {
+        margin-bottom: 16px;
+      }
+    }
+    &-desc {
+      margin-top: 6px;
+    }
+  }
+}
 
+.articles-layout {
+  .wins {
+    padding-bottom: 66px;
+    @media (max-width: 986px) {
+      padding-bottom: 30px;
+    }
+    @media (max-width: 768px) {
+      padding-bottom: 30px;
+    }
+  }
 }
