--- a/src/scss/blocks/_wins.scss
+++ b/src/scss/blocks/_wins.scss
@@ -14,6 +14,7 @@
     &-title {
       text-align: center;
       margin-bottom: 40px;
+      position: relative;
       transition: 3s;
       h1 {
         font-size: 44px;
@@ -30,6 +31,9 @@
       font-size: 14px;
       line-height: 16px;
       color: #5D6888;
+      position: absolute;
+      right: 0;
+      bottom: 0;
       span {
         font-weight: bold;
       }
@@ -50,8 +54,13 @@
       font-size: 14px;
       line-height: 16px;
       text-align: center;
-      color: #FFFFFF;
+      color: #404040;
       margin-top: 16px;
+    }
+  }
+  &_blue {
+    .wins-box-name {
+      color: #FFFFFF;
     }
   }
   &-slider {
