--- a/src/scss/pages/_info.scss
+++ b/src/scss/pages/_info.scss
@@ -251,6 +251,7 @@
     }
     &-submit {
       text-align: right;
+      padding-top: 10px;
       .l-btn {
         max-width: 180px;
         width: 100%;
