--- a/src/scss/layers/_header.scss
+++ b/src/scss/layers/_header.scss
@@ -280,4 +280,16 @@
       }
     }
   }
+  .header-info-btn {
+    margin-bottom: 16px;
+    margin-top: 20px;
+  }
+  .header-info_btn:first-child {
+    margin-right: 0;
+  }
+  .l-btn_reg {
+    margin-top: 30px;
+    margin-right: 0;
+  }
+
 }
