add auth header for page LK

--- a/src/html/views/9-page.html
+++ b/src/html/views/9-page.html
@@ -1,7 +1,7 @@
 <% var data = {
 title: "Розыгрыш конкурсов | ЛК | Мои аукционы"
 }; %>
-<%= _.template(require('./../includes/header.html').default)(data) %>
+<%= _.template(require('./../includes/header-auth.html').default)(data) %>
 <main role="main">
 
 <section class="info info_l1">
