--- a/src/html/views/11-page.html
+++ b/src/html/views/11-page.html
@@ -161,13 +161,14 @@ title: "Розыгрыш конкурсов | ЛК | Профиль"
                                 <div class="l-form-control-flex">
                                     <div class="l-form-label">Новый пароль:</div>
                                     <div class="l-form-control-box">
-                                        <input type="password" class="l-input l-input_l1 l-input-place_l1" name="newPass">
+                                        <input type="password" class="l-input l-input_l1 l-input-place_l1 valid-pass" name="newPass">
                                     </div>
                                 </div>
                                 <div class="l-form-control-flex l-form-control-flex_l1">
                                     <div class="l-form-label">Подтверждение пароля:</div>
                                     <div class="l-form-control-box">
-                                        <input type="password" class="l-input l-input_l1 l-input-place_l1" name="confirmationPass">
+                                        <input type="password" class="l-input l-input_l1 l-input-place_l1 valid-re-pass" name="confirmationPass">
+                                        <div class="l-form-control-msg">Пароли не совпадают</div>
                                     </div>
                                 </div>
                                 <div class="l-setting-btn">
