--- a/src/html/views/1-1-home-win-repost.html
+++ b/src/html/views/1-1-home-win-repost.html
@@ -709,7 +709,7 @@ title: "Розыгрыш конкурсов | Главная"
                         </div>
                     </div>
                     <div class="catalogs-more">
-                        <button type="button" class="l-btn l-btn-blue-dark l-btn-more">Сделать ставку</button>
+                        <button type="button" class="l-btn l-btn-blue-dark l-btn-more">Показать еще</button>
                     </div>
                     <div class="paginate">
                         <div class="paginate-pages">
