--- a/src/html/views/2-product.html
+++ b/src/html/views/2-product.html
@@ -96,7 +96,7 @@ title: "Розыгрыш конкурсов | Главная"
                 </div>
 
                 <div class="places-more">
-                    <button type="button" class="l-btn l-btn-blue-dark l-btn-more js-more">Сделать ставку</button>
+                    <button type="button" class="l-btn l-btn-blue-dark l-btn-more js-more">Показать еще</button>
                 </div>
 
 
