--- a/src/html/views/2-product.html
+++ b/src/html/views/2-product.html
@@ -8,9 +8,15 @@ title: "Розыгрыш конкурсов | Главная"
     <div class="box">
         <h1 class="product-title">Название товара. Стандартная длина названия в 2 строки</h1>
         <div class="product-info">
-            <div class="product-info-thumb">
+            <div class="product-info-thumb l-scrollbar">
                 <div class="product-info-thumb-img active">
                     <img src="img/demo/pre.png" />
+                </div>
+                <div class="product-info-thumb-img">
+                    <img src="img/demo/min2.png" />
+                </div>
+                <div class="product-info-thumb-img">
+                    <img src="img/demo/min2.png" />
                 </div>
                 <div class="product-info-thumb-img">
                     <img src="img/demo/min2.png" />
