--- a/src/scss/blocks/_product.scss
+++ b/src/scss/blocks/_product.scss
@@ -241,12 +241,14 @@
         flex-basis: 100%;
       }
       &-thumb {
+        max-width: 100%;
+        overflow-y: auto;
         order: 2;
         flex-basis: 100%;
         margin-top: 16px;
         display: flex;
         &-img {
-          min-width: 100%;
+          min-width: 100px;
           margin-right: 20px;
           margin-bottom: 0;
         }
