--- a/src/html/views/2-1-product-wins.html
+++ b/src/html/views/2-1-product-wins.html
@@ -8,7 +8,7 @@ title: "Розыгрыш конкурсов | Продукт"
     <div class="box">
         <h1 class="product-title">Название товара. Стандартная длина названия в 2 строки</h1>
         <div class="product-info">
-            <div class="product-info-thumb">
+            <div class="product-info-thumb l-scrollbar">
                 <div class="product-info-thumb-img active">
                     <img src="img/demo/pre.png" />
                 </div>
