--- a/src/scss/pages/_info.scss
+++ b/src/scss/pages/_info.scss
@@ -127,6 +127,9 @@
     @media (min-width: 986px) {
       margin-left: 20px;
     }
+    @media (max-width: 768px) {
+      max-width: 100%;
+    }
   }
 }
 .panel-default {
