--- a/src/scss/blocks/_auctions.scss
+++ b/src/scss/blocks/_auctions.scss
@@ -10,6 +10,9 @@
   &.c-list-drop {
     border: 1px solid #D3D9E8;
     border-radius: 10px;
+    @media (max-width: 768px) {
+      margin-bottom: 16px;
+    }
   }
   &-fix {
     max-height: 818px;
