--- a/src/html/includes/header-auth.html
+++ b/src/html/includes/header-auth.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-
+    <meta name="theme-color" content="#526cb3">
     <link rel="shortcut icon" href="favicon/favicon.ico"/>
     <link rel="stylesheet" href="css/style.bundle.css"/>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
