--- a/src/scss/blocks/_wins.scss
+++ b/src/scss/blocks/_wins.scss
@@ -37,6 +37,9 @@
       span {
         font-weight: bold;
       }
+      @media (max-width: 986px) {
+        position: relative;
+      }
     }
   }
   &-box {
