fix menu drawer

--- a/src/scss/layers/_header.scss
+++ b/src/scss/layers/_header.scss
@@ -204,6 +204,9 @@
     &-select {
       margin-top: -10px;
     }
+    &-menu_link {
+      padding: 11px
+    }
   }
 }
 @media (max-width: 360px){
