fix footer payment

--- a/src/scss/layers/_footer.scss
+++ b/src/scss/layers/_footer.scss
@@ -194,7 +194,11 @@ footer {
       padding-top: 20px;
     }
     &-payment {
-      justify-content: center;
+      display: block;
+      padding-bottom: 12px;
+      &-methods {
+        justify-content: center;
+      }
     }
   }
 
