--- a/src/html/views/6-page.html
+++ b/src/html/views/6-page.html
@@ -82,17 +82,17 @@ title: "Розыгрыш конкурсов | Часто задаваемые в
                                     <div class="l-upload-preview">
                                         <div class="l-upload-preview-box">
                                             <div class="remove-image js-remove-image"></div>
-                                            <img class="file-upload-image js-upload-preview" src="#" alt="your image" />
+                                            <img class="file-upload-image js-upload-preview" src="#" alt="изображение" />
                                             <div class="l-upload-preview-text">Изображение 1</div>
                                         </div>
                                         <div class="l-upload-preview-box">
                                             <div class="remove-image js-remove-image"></div>
-                                            <img class="file-upload-image js-upload-preview" src="#" alt="your image" />
+                                            <img class="file-upload-image js-upload-preview" src="#" alt="изображение" />
                                             <div class="l-upload-preview-text">Изображение 2</div>
                                         </div>
                                         <div class="l-upload-preview-box">
                                             <div class="remove-image js-remove-image"></div>
-                                            <img class="file-upload-image js-upload-preview" src="#" alt="your image" />
+                                            <img class="file-upload-image js-upload-preview" src="#" alt="изображение" />
                                             <div class="l-upload-preview-text">Изображение 3</div>
                                         </div>
                                     </div>
