--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -31,6 +31,7 @@
 @import "blocks/methodPay";
 @import "blocks/table";
 @import "blocks/reviews";
+@import "blocks/viewCat";
 
 //Слои
 @import "layers/header";
