--- a/src/scss/blocks/_catalogs.scss
+++ b/src/scss/blocks/_catalogs.scss
@@ -31,6 +31,11 @@
           transform: rotate(180deg);
         }
       }
+      &.active {
+        .f-icon {
+          transform: rotate(180deg);
+        }
+      }
 
       &:not(last-child) {
         margin-right: 20px;
@@ -44,7 +49,6 @@
   &-item {
     filter: drop-shadow(0px 1px 20px rgba(0, 0, 0, 0.1));
     margin-bottom: 40px;
-    transition: .3s;
   }
   .container-fluid {
     padding-right: inherit;
