--- a/src/html/views/3-to-begin.html
+++ b/src/html/views/3-to-begin.html
@@ -270,6 +270,29 @@ title: "Розыгрыш конкурсов | Начать"
             </div>
         </div>
     </section>
+    <section class="helper">
+        <div class="box">
+            <div class="helper-title">
+                <h2>Помощь</h2>
+            </div>
+            <div class="helper-block">
+                <a href="7-page.html#payment" class="helper-block-item">
+                    <div class="helper-block-text">Способы оплаты</div>
+                </a>
+                <a href="7-page.html#terms" class="helper-block-item">
+                    <div class="helper-block-text">Пользовательское соглашение</div>
+                </a>
+                <a href="7-page.html#algorithm" class="helper-block-item">
+                    <div class="helper-block-text"> Полное описание алгоритма розыгрыша</div>
+                </a>
+                <a href="#" class="helper-block-item">
+                    <div class="helper-block-text">Задать вопрос</div>
+                </a>
+
+            </div>
+        </div>
+    </section>
+
     <%= _.template(require('./../includes/modals/auth.html').default)(data) %>
 </main>
 <%= _.template(require('./../includes/footer.html').default)(data) %>
