--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,6 +32,7 @@
 @import "blocks/table";
 @import "blocks/reviews";
 @import "blocks/viewCat";
+@import "blocks/helper";
 
 //Слои
 @import "layers/header";
